code inspections cleanup